# dream-photo-ai-backend

./: .env.example  .gitignore  Dockerfile  README.md  api.py  config.py  db.py  docker-compose.yml  init_db.py  init_db.sql  loader.py  main.py  pyproject.toml  requirements.txt  run-api.sh  run-bot.sh  run.sh  start-all.sh  start-api.sh  start-bot.sh  start-py311.sh  start-server.sh  temp.env
.github/workflows/: main.yml
app/api/: app.py  lifecycle.py  middlewares.py
app/bot/: main.py
app/config/: config.py
app/db/: db.py
app/repository/: __init__.py  admin.py  admin_repository.py  db.py  enrollment.py  example.py  generation_repository.py  lora.py  model.py  model_repository.py  payment.py  payment_repository.py  promo_code.py  promo_usage.py  referral_repository.py  requirements.txt  user.py
app/utils/: add_test_loras.py  admin_notifications.py  logger.py  permissions.py  set_bot_commands.py
config/: config.py
db/: database.py  models.py
flyway/: Dockerfile
flyway/sql/: V1__init.sql
handlers/: __init__.py  admin_db_commands.py  admin_notifications.py  commands.py  generation_handler.py  payment_handler.py  photo_handler.py  start_handler.py  training_api.py  training_handler.py  training_handlers.py
loader/: bot.py
repository/: __init__.py  admin_repo.py  admin_repository.py  base_repository.py  model_repo.py  model_repository.py  schema.sql  user_repo.py  user_repository.py
scripts/: alter_admin_action_table.sql
services/: replicate_service.py
utils/: add_test_loras.py  keyboard.py  notifications.py  states.py  training_utils.py
(+40 files in other folders)
